--- a/Pokedex/css/pokedex.css
+++ b/Pokedex/css/pokedex.css
@@ -1,5 +1,6 @@
 .content h1{
     margin: 0;
+    
 }
 .pokemons {
     display: grid;
@@ -148,6 +149,36 @@
     border: none;
     border-radius: 1rem;
 }
+
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+	height: 100%;
+    background-repeat: no-repeat;
+}
+.logo {
+    justify-self: start;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 
 @media screen and (min-width: 380px) {
     .pokemons {
